# diseases-ai-backend

./: .dockerignore  .gitignore  DEPLOYMENT.md  Data.txt  Dockerfile  FINAL_IMPLEMENTATION.md  HF_ENV_SETUP.md  IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_SYSTEM.md  README.md  README_HF_SETUP.md  app.py  example_usage.py  firebase.py  main.py  pydantic_validations.py  pyproject.toml  requirements.txt  test_who_api.py  tools.py  utils.py  vercel.json
.github/workflows/: deploy-to-hf.yml
api/: index.py
